--- a/Notebook/Views/Home/Index.cshtml
+++ b/Notebook/Views/Home/Index.cshtml
@@ -12,6 +12,14 @@
             <td>@item.Login</td>
             <td>@item.Password</td>
             <td>@item.Role</td>
+            <td>
+                <a asp-action="Edit" asp-controller="Home" asp-route-id="@item.Id">Изменить</a>
+            </td>
+            <td>
+                <form asp-controller="Home" asp-action="Delete" method="post" asp-route-id="@item.Id">
+                    <input type="submit" value="Удалить" />
+                </form>
+            </td>
         </tr>
     }
 </table>
