added user validation

--- a/Notebook/Views/Home/Create.cshtml
+++ b/Notebook/Views/Home/Create.cshtml
@@ -1,24 +1,32 @@
 ﻿@model Notebook.Models.User
 
-<h2>Добавление пользователя</h2>
+<h2>Add user</h2>
 <form asp-action="create" asp-controller="home">
     <p>
         <label asp-for="Email">Email</label><br />
         <input type="text" asp-for="Email" />
+        <span asp-validation-for="Email"></span>
     </p>
     <p>
         <label asp-for="Login">Login</label><br />
         <input type="text" asp-for="Login" />
+        <span asp-validation-for="Login"></span>
     </p>
     <p>
         <label asp-for="Password">Password</label><br />
         <input type="text" asp-for="Password" />
+        <span asp-validation-for="Password"></span>
     </p>
     <p>
         <label asp-for="Role">Role</label><br />
         <input type="text" asp-for="Role" />
+        <span asp-validation-for="Role"></span>
     </p>
     <p>
-        <input type="submit" value="Отправить" />
+        <input type="submit" value="Send" />
     </p>
 </form>
+
+<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.10/jquery.validate.unobtrusive.min.js"></script>
