--- a/Notebook/Views/Home/Index.cshtml
+++ b/Notebook/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<Notebook.Models.User>
 
-<h2>Список пользователей</h2>
-<p><a asp-action="Create">Добавить пользователя</a></p>
+<h2>A list of users</h2>
+<p><a asp-action="Create">Add user</a></p>
 <table class="table">
-    <tr><th>Имя</th><th>Возраст</th></tr>
+    <tr><th>Id</th><th>Email</th><th>Login</th><th>Password</th><th>Role</th></tr>
     @foreach (var item in Model)
     {
         <tr>
@@ -13,11 +13,11 @@
             <td>@item.Password</td>
             <td>@item.Role</td>
             <td>
-                <a asp-action="Edit" asp-controller="Home" asp-route-id="@item.Id">Изменить</a>
+                <a asp-action="Edit" asp-controller="Home" asp-route-id="@item.Id">Edit</a>
             </td>
             <td>
                 <form asp-controller="Home" asp-action="Delete" method="post" asp-route-id="@item.Id">
-                    <input type="submit" value="Удалить" />
+                    <input type="submit" value="Delete" />
                 </form>
             </td>
         </tr>
