--- a/Notebook/Views/Home/CreateUser.cshtml
+++ b/Notebook/Views/Home/CreateUser.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Notebook.Models.User
 
 <h2>Add user</h2>
-<form asp-action="create" asp-controller="home">
+<form asp-action="CreateUser" asp-controller="home">
     <p>
         <label asp-for="Email">Email</label><br />
         <input type="text" asp-for="Email" />
