--- a/Notebook/Views/Home/CreateNote.cshtml
+++ b/Notebook/Views/Home/CreateNote.cshtml
@@ -4,7 +4,7 @@
 <form asp-action="CreateNote" asp-controller="home">
     <p>
         <label asp-for="Date">Date</label><br />
-        <input type="text" asp-for="Date" placeholder="@DateTime.Now.Date" />
+        <input type="text" asp-for="Date" value="@DateTime.Now.Date" />
         <span asp-validation-for="Date"></span>
     </p>
     <p>
