--- a/Notebook/Views/Home/Index.cshtml
+++ b/Notebook/Views/Home/Index.cshtml
@@ -27,6 +27,7 @@ else
             <td>@note.Date</td>
             <td>@note.Name</td>
             <td>@note.Description</td>
+            <td><img src="@note.Photo"></td>
             <td>
                 <a asp-action="EditNote" asp-controller="Home" asp-route-id="@note.Id">Edit</a>
             </td>
